# optee-simple-aes

./: Android.mk  CMakeLists.txt  Makefile  README.md
host/: Makefile  main.c
ta/: Android.mk  Makefile  simple_aes_ta.c  sub.mk  user_ta_header_defines.h
ta/include/: simple_aes_ta.h
